# Distribuidos

ProyetoSD/: README.md  config.json
ProyetoSD/PC1/: broker_zmq.py  semaforo.py  sensor_camara.py  sensor_espira.py  sensor_gps.py
ProyetoSD/PC2/: bd_replica.py  control_semaforos.py  health_check.py  servicio_analitica.py
ProyetoSD/PC3/: bd_principal (1).py  monitoreo_consulta (1).py
TallerRM/: CMakeLists.txt  README.md  biblioteca.grpc.pb.cc  biblioteca.grpc.pb.h  biblioteca.pb.cc  biblioteca.proto  cliente.cpp  libros.txt  servidor.cpp
